# uutils

./: Cargo.toml
src/uu/arch/src/: arch.rs
src/uu/base32/src/: base_common.rs
src/uu/basename/src/: basename.rs
src/uu/cat/src/: cat.rs
src/uu/chcon/src/: chcon.rs
src/uu/chgrp/src/: chgrp.rs
src/uu/chmod/src/: chmod.rs
src/uu/chown/src/: chown.rs
src/uu/chroot/src/: chroot.rs
src/uu/cksum/src/: cksum.rs
src/uu/comm/src/: comm.rs
src/uu/cp/src/: cp.rs
src/uu/csplit/src/: csplit.rs
src/uu/cut/src/: cut.rs
src/uu/date/src/: date.rs
src/uu/dd/src/: dd.rs
src/uu/df/src/: df.rs
src/uu/dircolors/src/: dircolors.rs
src/uu/dirname/src/: dirname.rs
src/uu/du/src/: du.rs
src/uu/echo/src/: echo.rs
src/uu/env/src/: env.rs
src/uu/expand/src/: expand.rs
src/uu/expr/src/: expr.rs
src/uu/factor/src/: cli.rs
src/uu/false/src/: false.rs
src/uu/fmt/src/: fmt.rs
src/uu/fold/src/: fold.rs
src/uu/groups/src/: groups.rs
src/uu/hashsum/src/: hashsum.rs
src/uu/head/src/: head.rs
src/uu/hostid/src/: hostid.rs
src/uu/hostname/src/: hostname.rs
src/uu/id/src/: id.rs
src/uu/install/src/: install.rs
src/uu/join/src/: join.rs
src/uu/kill/src/: kill.rs
src/uu/link/src/: link.rs
src/uu/ln/src/: ln.rs
src/uu/logname/src/: logname.rs
src/uu/ls/src/: ls.rs
src/uu/mkdir/src/: mkdir.rs
src/uu/mkfifo/src/: mkfifo.rs
src/uu/mknod/src/: mknod.rs
src/uu/shuf/: Cargo.toml
src/uu/shuf/src/: shuf.rs  vectored.rs
src/uu/tac/: Cargo.toml
src/uucore/: Cargo.toml
tests/by-util/: test_mkfifo.rs  test_shuf.rs
(+63 files in other folders)
