[package]
name = "uu_shuf"
version = "0.0.24"
authors = ["uutils developers"]
license = "MIT"
description = "shuf ~ (uutils) display random permutations of input lines"

homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/shuf"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/shuf.rs"

[dependencies]
clap = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
uucore = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[[bin]]
name = "shuf"
path = "src/main.rs"
